<resources>
    <!-- General -->
    <string name="app_name">Jaundice Detection</string>

    <!-- Titles -->
    <string name="add_family_dialog_title">Enter family information</string>
    <string name="add_child_dialog_title">Enter child information</string>
    <string name="popup_remove_title">Remove</string>
    <string name="loginTitle">Tap a family to login</string>
    <string name="infoFragTitle">Jaundice Information</string>
    <string name="nearbyFragTitle">Nearby Doctors</string>

    <!-- Login Elements -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="login_error">Login Error!</string>


    <!-- Messages -->
    <string name="popup_remove_message">Are you sure?</string>

    <!-- Menu Items -->
    <string name="action_logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <!-- Labels -->
    <string name="label_day_of_birth">Day of Birth:</string>
    <string name="label_time_of_birth">Time of Birth:</string>
    <string name="label_child_name">Child Name</string>

    <!-- Hints -->
    <string name="hint_name">Name</string>
    <string name="hint_day">Day</string>
    <string name="hint_time">Time</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Titles -->
    <string name="nav_info">Jaundice Info</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_child_list">Child List</string>
    <string name="nav_test_list">Test List</string>
<<<<<<< HEAD
=======
    <string name="family_format">%s Family</string>
    <string name="new_test_dialog_title">Add a New Test</string>
    <string name="take_picture">Take picture</string>
    <string name="upload_picture">Upload picture</string>
    <string name="eye">Eye</string>
    <string name="palm">Palm</string>
    <string name="foot">Foot</string>
    <string name="test_format">%s Family Tests</string>
>>>>>>> 5ead7cba6f04e51bb64fb19dd2d5568a28824121
    <string name="nav_nearby_doctors">Nearby Doctors</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="info_fragment_text">Blank Text</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearby_hospital_text">hospital</string>
    <string name="nearby_hospital_toast">Nearby Hospitals</string>
<<<<<<< HEAD
    <string name="notification_content">Jaundice Retest Recommended</string>

    <!-- Test fragment strings -->
    <string name="new_test_dialog_title">Add a New Test</string>
    <string name="take_picture">Take picture</string>
    <string name="upload_picture">Upload picture</string>
    <string name="eye">Eye</string>
    <string name="action_choose_child">Choose Child</string>
    <string name="dialog_choose_child_title">Choose child</string>

    <string name="family_format">%s Family</string>
    <string name="child_format">%s\'s Results</string>
    <string name="test_format">%s Family Tests</string>
=======
    <string name="action_choose_child">Choose Child</string>
    >>>>>>> e6f7787fbe22c865e891d2f22db8cd32bb764d2d
>>>>>>> 5ead7cba6f04e51bb64fb19dd2d5568a28824121

</resources>
