<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_child_list"
            android:icon="@drawable/ic_people_black_48dp"
            android:title="@string/nav_child_list" />
        <item
            android:id="@+id/nav_test_list"
            android:icon="@drawable/test_tube"
            android:title="@string/nav_test_list" />
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_logout" />
    </group>

</menu>
